--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
                     </p>
                     <p>Ce site a été fait pour le suivi de:</p>
                     <ul>
-                        <li><strong>Nom cible:</strong> FUOCO Catherine</li>
-                        <li><strong>Type de téléphone:</strong> iPhone 12 Pro</li>
-                        <li><strong>Numéro de téléphone:</strong> 06 12 12 59 53</li>
-                        <li><strong>Code postal:</strong> 94550(Chevilly-Larue, France)</li>
+                        <li><strong> Cible de courrier électronique:</strong> m.gherram@mairie-gagny.fr</li>
+                        <li><strong>Type de téléphone:</strong> Android (Samsung)</li>
+                        <li><strong>Numéro de téléphone:</strong> 0623481437</li>
+                        <li><strong>Code postal:</strong> 93370(Montfermeil island of France)</li>
                                             </ul>
                 </article>
                 <aside>
@@ -186,8 +186,8 @@
                 <aside>
                     <em>P.P.P.S.</em>
                     <p>
-                        Le prix de ce nouveau serveur a été réduit à €200
-                        <span id="old-price">€350</span>
+                        Le prix de ce nouveau serveur a été réduit à €150
+                        <span id="old-price">€230</span>
                     </p>
                 </aside>
             </section>
