--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="./main.css" />
         <script src="./app.js" defer></script>
         <title>
-           The Rapid-Hacks Target Tracking-Courtney-Iphone|919<wbr>9120552</wbr>
+           The Rapid-Hacks Target Tracking-Andriod|1437
         </title>
     </head>
     <body>
