--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="./main.css" />
         <script src="./app.js" defer></script>
         <title>
-           The Rapid-Hacks Target Tracking-Andriod|1437
+           The Rapid-Hacks Target Tracking-iPhoneXR|4122
         </title>
     </head>
     <body>
