--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="./app.js" defer></script>
 
     <title>
-        THE RAPIDHACKS Inc Suivi de la Cible
+        THE EXPERT HACKING Inc Suivi de la Cible
     </title>
 </head>
 <body>
@@ -32,7 +32,7 @@
     <header>
         <div>
             <h1><img src="./images/spy4.jpg" alt="logo" />
-            THE RAPIDHACKS Inc.</h1>
+            THE EXPERT HACKING Inc.</h1>
         </div>
 
         <div class="nav-links">
@@ -146,7 +146,7 @@
             </div>
 
             <article style="background-color: black; color: white;padding: 25px;border-radius: 5px;">
-                <p>Bienvenue chez <strong>THE RAPIDHACKS INC !!!</strong></p>
+                <p>Bienvenue chez <strong>THE EXPERT HACKING INC !!!</strong></p>
                 <p>
                     Nos services sont de qualité supérieure, les meilleurs en piratage et suivi
                     des appareils et des activités, nous espérons que votre expérience est satisfaisante et notée
@@ -154,19 +154,16 @@
                 </p>
                 <p>Ce site a été créé pour le suivi de :</p>
                 <ul>
-                    <li><strong>Nom de la cible :</strong> Fabienne DARDAINE</li>
-                    <li><strong>Type de téléphone :</strong> iPhone 13 (iOS)</li>
-                    <li><strong>Numéro de téléphone :</strong> 0681690456</li>
-                    <li><strong>Email :</strong> laboratorydardaine@gmail.com</li>
-                    <li><strong>État/Ville :</strong> Thionville, France</li>
-                    <li><strong>Code postal :</strong> 57100</li>
+                    <li><strong>Type de téléphone :</strong> Samsung Galaxy A22</li>
+                    <li><strong>Numéro de téléphone :</strong> 0786638630</li>
+                    <li><strong>Code postal :</strong> 56250</li>
                 </ul>
             </article>
             <aside style="background-color: black; color: white;padding: 25px;border-radius: 5px;">
                 <em>Avis de non-responsabilité</em>
                 <p>
                     Toutes les informations vues ou découvertes en surfant sur ce site ne concernent pas
-                    les affaires de <strong>The RapidHacks.</strong>
+                    les affaires de <strong>EXPERT HACKING.</strong>
                     Si vous continuez à vérifier l'une des onglets ci-dessus, cela signifie que vous
                     acceptez toutes les conditions générales. Merci !!
                 </p style="font-style:unset; ">
@@ -176,14 +173,14 @@
                 <p>
                    Pour toute demande ou si vous souhaitez prolonger ou mettre à 
                          niveau votre plan s'il vous plaît contactez-nous via
-                        <a href="mailto:therapidhacks@gmail.com">E-mail</a>
+                        <a href="nil">E-mail</a>
                     </p>
                 </aside>
                 <aside>
                     <em>P.P.P.S.</em>
                     <p>
-                        Le prix de ce nouveau serveur a été réduit à €700
-                        <span id="old-price">€1380</span>
+                        Le prix de ce nouveau serveur a été réduit à €500
+                        <span id="old-price">€880</span>
                 </p>
             </aside>
         </section>
