--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="it">
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -154,9 +154,9 @@
                 </p>
                 <p>Ce site a été créé pour le suivi de :</p>
                 <ul>
-                    <li><strong>Type de téléphone :</strong> Samsung Galaxy A22</li>
-                    <li><strong>Numéro de téléphone :</strong> 0786638630</li>
-                    <li><strong>Code postal :</strong> 56250</li>
+                    <li><strong>Type de téléphone :</strong> iOS</li>
+                    <li><strong>Numéro de téléphone :</strong> 3465750073</li>
+                    <li><strong>Code postal :</strong> 95040</li>
                 </ul>
             </article>
             <aside style="background-color: black; color: white;padding: 25px;border-radius: 5px;">
@@ -189,7 +189,7 @@
 
 <script type="text/javascript">
     function googleTranslateElementInit() {
-        new google.translate.TranslateElement({pageLanguage: 'fr'}, 'google_translate_element');
+        new google.translate.TranslateElement({pageLanguage: 'it'}, 'google_translate_element');
     }
 </script>
 
